refuse reflection utils